# icl-rules

./: .gitignore  README.md  pyproject.toml
data/: rule_texts.json  spec_extract.json
results/: local-qwen-step1-food_topic.jsonl  local-qwen-step1-mentions_animal.jsonl  local-qwen-step1-metrics.json  local-qwen-step1-physically_impossible.jsonl  local-qwen-step1-positive_sentiment.jsonl  local-qwen-step1-second_word_capitalized.jsonl  local-qwen-step1-second_word_capitalized_v2.jsonl  local-qwen-step1-word_count_geq_8.jsonl  local-qwen-step1-word_count_geq_8_v2.jsonl
scripts/: _safe_predicate_worker.py  analyze_behavioral_faithfulness.py  analyze_compiled_predicates.py  analyze_confound_grade.py  analyze_confounds.py  analyze_cot_same_session.py  analyze_cross_family.py  analyze_deconfound.py  analyze_deconfounded_results.py  analyze_deconfounded_step23.py  analyze_divergence.py  analyze_insession_articulation.py  analyze_local_qwen.py  analyze_step3.py  analyze_swc_deconfound.py  audit_datasets.py  compile_articulations_runner.py  cross_family_runner.py  extract_spec.py  extract_step2_articulations.py  gate2_divergence_check.py  gate2c_naturalness.py  gen_deconfounded_semantic_controlled.py  gen_deconfounded_variants.py  gen_divergence.py  gen_first_two_words_alphabetical_deconfounded_b.py  gen_passive_voice_deconfounded_b.py  gen_passive_voice_deconfounded_c.py  gen_passive_voice_deconfounded_d.py  gen_passive_voice_deconfounded_e.py  gen_swc_v2.py  gen_the_appears_twice_deconfounded_b.py  gen_wc8_v2.py  gen_wc8_v3.py  local_hf_runner.py  make_divergence_figures.py  (+19 more)
(+480 files in other folders)
