[project]
name = "icl-articulation"
version = "0.1.0"
description = "for the ICL rule-articulation study"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pytest>=8",
    "httpx>=0.27",
    "pyyaml>=6",
    "wordfreq>=3",
    "nltk>=3.8",
    "pyphen>=0.14
    "matplotlib>=3.8",
]

[project.optional-dependencies]
report = ["markdown>=3.5", "pypdf>=4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
